// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`merges nested themes 1`] = `
<glamorous.View>
  <View
    style={null}
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1qe8dj5 rn-flexBasis-1mlwlqe rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
    >
      <ThemeProvider
        theme={
          Object {
            "margin": 1,
            "padding": 1,
          }
        }
      >
        <glamorous.View>
          <View
            style={null}
          >
            <div
              className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1qe8dj5 rn-flexBasis-1mlwlqe rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
            >
              <glamorous(View)>
                <View
                  style={
                    Array [
                      Object {
                        "margin": 1,
                        "padding": 1,
                      },
                    ]
                  }
                >
                  <div
                    className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1qe8dj5 rn-flexBasis-1mlwlqe rn-flexDirection-eqz5dr rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-position-bnwqim"
                    style={
                      Object {
                        "marginBottom": "1px",
                        "marginLeft": "1px",
                        "marginRight": "1px",
                        "marginTop": "1px",
                        "paddingBottom": "1px",
                        "paddingLeft": "1px",
                        "paddingRight": "1px",
                        "paddingTop": "1px",
                      }
                    }
                  />
                </View>
              </glamorous(View)>
              <ThemeProvider
                theme={
                  Object {
                    "margin": 2,
                  }
                }
              >
                <glamorous(View)>
                  <View
                    style={
                      Array [
                        Object {
                          "margin": 2,
                          "padding": 1,
                        },
                      ]
                    }
                  >
                    <div
                      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1qe8dj5 rn-flexBasis-1mlwlqe rn-flexDirection-eqz5dr rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-position-bnwqim"
                      style={
                        Object {
                          "marginBottom": "2px",
                          "marginLeft": "2px",
                          "marginRight": "2px",
                          "marginTop": "2px",
                          "paddingBottom": "1px",
                          "paddingLeft": "1px",
                          "paddingRight": "1px",
                          "paddingTop": "1px",
                        }
                      }
                    />
                  </View>
                </glamorous(View)>
              </ThemeProvider>
            </div>
          </View>
        </glamorous.View>
      </ThemeProvider>
    </div>
  </View>
</glamorous.View>
`;

exports[`renders a component with theme 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1qe8dj5 rn-flexBasis-1mlwlqe rn-flexDirection-eqz5dr rn-height-eu3ka rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-position-bnwqim"
  style="padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;"
/>
`;

exports[`renders if children are null 1`] = `
<ThemeProvider
  theme={
    Object {
      "padding": 1,
    }
  }
/>
`;

exports[`with theme prop of margin 2px 1`] = `
<ThemeProvider
  theme={
    Object {
      "margin": 2,
    }
  }
/>
`;

exports[`with theme prop of margin 2px 2`] = `
<ThemeProvider
  theme={
    Object {
      "margin": 2,
    }
  }
/>
`;

exports[`with theme prop of padding 10px 1`] = `
<Parent>
  <ThemeProvider
    theme={
      Object {
        "padding": 10,
      }
    }
  >
    <glamorous(Text)>
      <Text
        style={
          Array [
            66,
            Object {
              "padding": 10,
            },
          ]
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-color-1lbce71 rn-display-1471scf rn-font-1lw9tu2 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "paddingBottom": "10px",
              "paddingLeft": "10px",
              "paddingRight": "10px",
              "paddingTop": "10px",
            }
          }
        />
      </Text>
    </glamorous(Text)>
  </ThemeProvider>
</Parent>
`;

exports[`with theme prop of padding 20px 1`] = `
<Parent>
  <ThemeProvider
    theme={
      Object {
        "padding": 20,
      }
    }
  >
    <glamorous(Text)>
      <Text
        style={
          Array [
            66,
            Object {
              "padding": 20,
            },
          ]
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-color-1lbce71 rn-display-1471scf rn-font-1lw9tu2 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "paddingBottom": "20px",
              "paddingLeft": "20px",
              "paddingRight": "20px",
              "paddingTop": "20px",
            }
          }
        />
      </Text>
    </glamorous(Text)>
  </ThemeProvider>
</Parent>
`;
